# Simulation

./: CMakeLists.txt  README.md  Robotic_arm.md  Simple.json  SimulationInit.cpp  SimulationInit.h  gcode.txt  main.cpp  main2.cpp  monkey.mtl
Domain/: ArmPosition.cpp  ArmPosition.h  RobotArm.cpp  RobotArm.h  Task.cpp  Task.h  User.cpp  User.h
conf/: db.yaml
libs/: CMakeLists.txt
libs/curlpp-0.8.1/include/curlpp/: Options.hpp
libs/curlpp-0.8.1/include/curlpp/internal/: OptionSetter.hpp
libs/curlpp-0.8.1/src/curlpp/internal/: OptionSetter.cpp
libs/glfw-3.4/: CMakeLists.txt
libs/imgui-1.91.8/: imgui_widgets.cpp
libs/imgui-node-editor/: imgui_node_editor_api.cpp
libs/imgui-node-editor/examples/application/: CMakeLists.txt
libs/imgui-node-editor/examples/simple-example/: CMakeLists.txt  simple-example.cpp
libs/yaml-cpp/include/yaml-cpp/node/: convert.h
misc/: block-based-instructions.md  renato-logboek.md
saves/: All Nodes.json
src/BL/: GCode.cpp  GCode.h  IManager.cpp  IManager.h
src/DAL/: IRepo.h  Repo.cpp  Repo.h
src/Domain/: ArmPosition.cpp  ArmPosition.h  Instruction.cpp  Instruction.h  Node.cpp  Node.h  NodeActivation.cpp  NodeActivation.h  Position.cpp  Position.h  RobotArm.cpp  RobotArm.h  Task.cpp  Task.h  Tool.cpp  Tool.h  User.cpp  User.h
src/Physical/BL/: PhysicalManager.cpp  PhysicalManager.h
src/Simulation/: CMakeLists.txt  FragmentShader.glsl  SimulationInit.cpp  SimulationInit.h  VertexShader.glsl
src/Simulation/BL/: SimulationManager.cpp  SimulationManager.h
src/Simulation/arms/Moveo/: moveo.ini  moveo.mtl
src/Simulation/include/Simulation/: Simulation.h
src/Simulation/src/: Init.cpp  Init.h  Mesh.cpp  Mesh.h  RobotArm.cpp  RobotArm.h  Utils.h  Visualization.cpp  Visualization.h
src/View/: IWindowManager.h  WindoManager.cpp  WindowManager.cpp  WindowManager.h
src/View/helper/: HelperFunctions.cpp  HelperFunctions.h
